# Bevy-BakedGI-Demo

./: Cargo.toml  README.md  scene.blend  scene2.blend
assets/models/: skybox.glb
assets/models/scene1/: building.glb
assets/models/scene2/: building.glb  skybox.glb
assets/shaders/: custom_material.wgsl  emissive_material.wgsl
src/: custom_material.rs  emissive_material.rs  level1.rs  level2.rs  main.rs  planets.rs  player_plugin.rs  setup_room.rs
