[package]
name = "material_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version  = "0.6", features = ["jpeg"]} #, "ktx2", "zlib", "zstd", "basis-universal"
rand = "*"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3