[package]
name = "material_demo"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = {version  = "0.7", features = ["jpeg"]}
bevy_egui = "0.13"
smooth-bevy-cameras = "0.4.0"
rand = "*"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3