[package]
name = "material_demo"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = {version  = "0.9", features = ["jpeg"]}
bevy_egui = "0.17"
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
rand = "*"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3